--- a/project/project-core/src/main/webapp/documents/warehouse/externalIncoming.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalIncoming.xhtml
@@ -4,9 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:cc="http://java.sun.com/jsf/composite/components"
-	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
+	xmlns:cc="http://java.sun.com/jsf/composite/components">
 
 	<h:body>
 		<ui:composition template="../../layout/main-template.xhtml">
@@ -27,14 +25,13 @@
 								<div class="box">
 									<div class="box-header">
 										<h3 class="page-header col-xs-12">
-											Przyjęcie zewnętrzne (PZ) : PZ1/12/2014
-											<small class="pull-right">Data: 2/10/2014</small>
+											Przyjęcie zewnętrzne (PZ) : #{externalInvoiceController.sourceObject.symbol}
+											<small class="pull-right">Data: #{externalInvoiceController.currentDate}</small>
 										</h3>
 									</div>
 									<div class="box-body">
 										<h:form>
-											<ui:param name="visible" value="#{invoiceGoodListController.visible}" />
-											<p:panel id="dupa" visible="#{visible}" styleClass="ui-panel-content">
+											<p:panel visible="#{externalInvoiceController.visible and invoiceGoodListController.visible}">
 												<cc:externalDocument controller="#{externalInvoiceController}" />
 												<p:spacer style="height : 10px"/>
 												<cc:invoiceGoodList controller="#{invoiceGoodListController}" />
@@ -43,8 +40,15 @@
 												<p:spacer style="height : 10px"/>
 												<cc:buttonBox controller="#{externalInvoiceController}"/>
 											</p:panel>
-											<p:panel visible="#{not visible}">
-												<cc:chooseGoodList controller="#{goodListController}" action="#{internalInvoiceController.addGood()}"/>
+											<p:panel visible="#{not invoiceGoodListController.visible}">
+												<cc:goodChooser controller="#{goodListController}"
+																action="#{externalInvoiceController.addGood()}"
+																editable="false"/>
+											</p:panel>
+											<p:panel visible="#{contractorListController.visible}">
+												<cc:contractorChooser controller="#{contractorListController}"
+																	  action="#{externalInvoiceController.addContractor()}"
+																	  editable="false"/>
 											</p:panel>
 										</h:form>
 									</div>
