--- a/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
+++ b/project/project-core/src/main/webapp/documents/warehouse/externalOutgoing.xhtml
@@ -27,14 +27,13 @@
 								<div class="box">
 									<div class="box-header">
 										<h3 class="page-header col-xs-12">
-											Wydanie zewnętrzne (WZ) : WZ1/12/2014
-											<small class="pull-right">Data: 2/10/2014</small>
+											Wydanie zewnętrzne (WZ) : #{externalInvoiceController.sourceObject.symbol}
+											<small class="pull-right">Data: #{externalInvoiceController.currentDate}</small>
 										</h3>
 									</div>
 									<div class="box-body">
 										<h:form>
-											<ui:param name="visible" value="#{invoiceGoodListController.visible}" />
-											<p:panel id="dupa" visible="#{visible}" styleClass="ui-panel-content">
+											<p:panel visible="#{externalInvoiceController.visible and invoiceGoodListController.visible}">
 												<cc:externalDocument controller="#{externalInvoiceController}" />
 												<p:spacer style="height : 10px"/>
 												<cc:invoiceGoodList controller="#{invoiceGoodListController}" />
@@ -43,8 +42,15 @@
 												<p:spacer style="height : 10px"/>
 												<cc:buttonBox controller="#{externalInvoiceController}"/>
 											</p:panel>
-											<p:panel visible="#{not visible}">
-												<cc:chooseGoodList controller="#{goodListController}" action="#{internalInvoiceController.addGood()}"/>
+											<p:panel visible="#{not invoiceGoodListController.visible}">
+												<cc:goodChooser controller="#{goodListController}"
+																action="#{externalInvoiceController.addGood()}"
+																editable="false"/>
+											</p:panel>
+											<p:panel visible="#{contractorListController.visible}">
+												<cc:contractorChooser controller="#{contractorListController}"
+																	  action="#{externalInvoiceController.addContractor()}"
+																	  editable="false"/>
 											</p:panel>
 										</h:form>
 									</div>
